[gd_scene load_steps=14 format=2]

[ext_resource path="res://Menu/Score/ScoreMenu.gd" type="Script" id=1]
[ext_resource path="res://Menu/Resources/menu-background.png" type="Texture" id=2]
[ext_resource path="res://Menu/Score/time.png" type="Texture" id=3]
[ext_resource path="res://Menu/Resources/stars-mini.png" type="Texture" id=4]
[ext_resource path="res://Menu/Resources/back-unpressed.png" type="Texture" id=5]
[ext_resource path="res://Menu/Resources/back-pressed.png" type="Texture" id=6]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://Menu/Resources/fredoka-one.ttf"

[sub_resource type="DynamicFont" id=2]
size = 130
outline_size = 5
outline_color = Color( 1, 0.454902, 0.454902, 1 )
font_data = SubResource( 1 )

[sub_resource type="DynamicFontData" id=3]
font_path = "res://Menu/Resources/fredoka-one.ttf"

[sub_resource type="DynamicFont" id=4]
size = 60
outline_size = 2
outline_color = Color( 0.0352941, 0.447059, 0.588235, 1 )
font_data = SubResource( 3 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 150, 360, 150 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 300, 360, 150 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 450, 360, 150 )

[node name="ScoreMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -1.67017
margin_bottom = -1.67017
script = ExtResource( 1 )

[node name="Background" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -720.5
margin_top = -473.5
margin_right = 720.5
margin_bottom = 473.5
texture = ExtResource( 2 )
stretch_mode = 4

[node name="VBoxContainer" type="VBoxContainer" parent="Background"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Level" type="Label" parent="Background/VBoxContainer"]
margin_right = 1441.0
margin_bottom = 158.0
custom_fonts/font = SubResource( 2 )
text = "LEVEL 1"
align = 1

[node name="HBoxContainer1" type="HBoxContainer" parent="Background/VBoxContainer"]
margin_top = 162.0
margin_right = 1441.0
margin_bottom = 342.0
rect_min_size = Vector2( 0, 180 )
alignment = 1

[node name="Time" type="TextureRect" parent="Background/VBoxContainer/HBoxContainer1"]
margin_left = 168.0
margin_right = 768.0
margin_bottom = 180.0
rect_min_size = Vector2( 600, 150 )
texture = ExtResource( 3 )
stretch_mode = 4

[node name="TimeLabel" type="Label" parent="Background/VBoxContainer/HBoxContainer1/Time"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 107.477
margin_top = 55.0
margin_right = -9.52258
margin_bottom = -32.0
custom_fonts/font = SubResource( 4 )
text = "FINISH"
align = 1
valign = 1

[node name="Stars" type="TextureRect" parent="Background/VBoxContainer/HBoxContainer1"]
margin_left = 772.0
margin_right = 1272.0
margin_bottom = 180.0
rect_min_size = Vector2( 500, 150 )
texture = SubResource( 5 )
expand = true
stretch_mode = 4

[node name="HBoxContainer2" type="HBoxContainer" parent="Background/VBoxContainer"]
margin_top = 346.0
margin_right = 1441.0
margin_bottom = 526.0
rect_min_size = Vector2( 0, 180 )
alignment = 1

[node name="Time" type="TextureRect" parent="Background/VBoxContainer/HBoxContainer2"]
margin_left = 168.0
margin_right = 768.0
margin_bottom = 180.0
rect_min_size = Vector2( 600, 150 )
texture = ExtResource( 3 )
stretch_mode = 4

[node name="TimeLabel" type="Label" parent="Background/VBoxContainer/HBoxContainer2/Time"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 117.0
margin_top = 55.0
margin_bottom = -32.0
custom_fonts/font = SubResource( 4 )
text = "00:00:00"
align = 1
valign = 1

[node name="Stars" type="TextureRect" parent="Background/VBoxContainer/HBoxContainer2"]
margin_left = 772.0
margin_right = 1272.0
margin_bottom = 180.0
rect_min_size = Vector2( 500, 150 )
texture = SubResource( 6 )
expand = true
stretch_mode = 4

[node name="HBoxContainer3" type="HBoxContainer" parent="Background/VBoxContainer"]
margin_top = 530.0
margin_right = 1441.0
margin_bottom = 710.0
rect_min_size = Vector2( 0, 180 )
alignment = 1

[node name="Time" type="TextureRect" parent="Background/VBoxContainer/HBoxContainer3"]
margin_left = 168.0
margin_right = 768.0
margin_bottom = 180.0
rect_min_size = Vector2( 600, 150 )
texture = ExtResource( 3 )
stretch_mode = 4

[node name="TimeLabel" type="Label" parent="Background/VBoxContainer/HBoxContainer3/Time"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 117.0
margin_top = 55.0
margin_bottom = -32.0
custom_fonts/font = SubResource( 4 )
text = "00:00:00"
align = 1
valign = 1

[node name="Stars" type="TextureRect" parent="Background/VBoxContainer/HBoxContainer3"]
margin_left = 772.0
margin_right = 1272.0
margin_bottom = 180.0
rect_min_size = Vector2( 500, 150 )
texture = SubResource( 7 )
expand = true
stretch_mode = 4

[node name="BackButton" type="TextureButton" parent="Background/VBoxContainer"]
margin_top = 714.0
margin_right = 1441.0
margin_bottom = 914.0
rect_min_size = Vector2( 0, 200 )
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 6 )
expand = true
stretch_mode = 3

[connection signal="pressed" from="Background/VBoxContainer/BackButton" to="." method="_on_BackButton_pressed"]
